--- a/env.vm
+++ b/env.vm
@@ -14,12 +14,12 @@ export ImageBuildDir := $(Transient)/Scratch
 
 # Define locations of external resources.
 
-JavaVersion := 1.8
+export JavaVersion := 1.8
 export JAVA := /usr/bin/java
 export JAVAC := /usr/bin/javac
 
 # The following is only needed by maven:
-export MVN := /usr/bin/mvn
+export MVN := /usr/bin/mvn -t toolchains-linux.xml
 export JDKToolLib := /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.144-0.b01.el7_4.x86_64/lib
 export MVN_REPO := $(HOME)/.m2/repository
 
