the test module builds

--- a/env.vm
+++ b/env.vm
@@ -25,4 +25,9 @@ export MVN_REPO := $(HOME)/.m2/repository
 
 # Secrets. (For local use only - if this script is run in a build pipeline,
 # the secrets should be obtained opaquely from a keystore.)
-export DockerhubCredentials = ....
+export DockerhubCredentials = /users/vagrant/SetDockerhubCredentials.sh
+
+# Locations of the JUnixSocket Java and native components - the task 'install_junixsocket'
+# installs them into the locations needed.
+export junixsocket := /home/vagrant/junixsocket/jars/junixsocket-common-modified-0.1.jar
+export junixsocketnative := /home/vagrant/junixsocket/classes
